tests/errors/assign_01.f90
program assign_01
    implicit none

    integer, parameter :: x = 2
    x = 1
    print *, x

end program
